--- a/resume.html
+++ b/resume.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rosie</title>
+    <title>Resume</title>
 
 </head>
 <body>
@@ -19,8 +20,8 @@
                 <div class="col-md-8">
                   <div class="row no-gutters bg-color-name-title">
                       <div class="col heading">
-                         <h1 class="name">Rosie Odenkirk</h1>
-                         <h2 class="title">Full Stack Developer</h2>
+                         <h1 class="name">Henry A. Valle</h1>
+                         <h2 class="title">Painter/Construction Worker</h2>
                       </div>
                   </div>  
                   <div class="row no-gutters">
@@ -30,13 +31,13 @@
                               <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                               <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                               <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-user-circle-o" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment" aria-hidden="true"></i><span>Contact</span></a>
+                                <a href="gallery.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment" aria-hidden="true"></i><span>Gallery</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="assets/cv/downloadCV.png" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                                <a href="assets/cv/Henry_Valle_-_Resume_-_Construction_Worker 2.pdf" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                             </li>
                          </ul>
                       </div>
@@ -55,21 +56,40 @@
                      </div>
                  </div>
                  <div class="history-items">
-                 <div class="timeline-item" data-dates="02/1998 - 04/2004">
-                    <h4>National College of Art and Design (NCAD)</h4>
-                    <p>Sculptor in residence</p>
+                 <div class="timeline-item" data-dates="04/2010 - 10/2014">
+                    <h4>Cordova condominiums & FIU university for N&B painting Corp, Miami Florida USA</h4>
+                    <p>Painter</p>
                 </div>
-                <div class="timeline-item" data-dates="04/2004 - 06/2008">
-                    <h4>Fisher and Diaz Funeral Directors</h4>
-                    <p>Junior Embalmer</p>
+                <div class="timeline-item" data-dates="11/2014 - 10/2015">
+                    <h4>Restoration USA, Pompano Beach, Florida USA</h4>
+                    <p>Mold remediation and water damage restoration, drywall , finish, plumbing and
+                        painting
+                        </p>
                 </div>
-                <div class="timeline-item" data-dates="06/2008 - 06/2011">
-                    <h4>Phantom Design Inc. Dublin</h4>
-                    <p>Junior Front End Developer</p>
+                <div class="timeline-item" data-dates="03/2016 - 11/2016">
+                    <h4>Home remodeling for Oasis LLC, Deerfield beach FL USA</h4>
+                    <p>Painting, Drywall & carpentry,</p>
                 </div>
-                <div class="timeline-item" data-dates="06/2011 - Present">
-                    <h4>Hooli Inc. Silicon Valley</h4>
-                    <p>Full Stack Web Developer</p>
+                <div class="timeline-item" data-dates="11/2016 - 03/2017">
+                    <h4>Aqualina spa & resort for JS carpentry, Sunny Isles beach, FL USA</h4>
+                    <p>Drywall painting,  firewall & gasline pipe inspection.</p>
+                </div>
+                <div class="timeline-item" data-dates="03/2017 - 09/2017">
+                    <h4>The Villages for JJ&V painting corp, West Palm Beach FL USA
+                    </h4>
+                    <p>Painting</p>
+                </div>
+                <div class="timeline-item" data-dates="09/2017 - 06/2018">
+                    <h4>Doherty construction group llc, West palm beach FL USA</h4>
+                    <p>Home remodeling, tile installation, drywall, finish , painting and carpentry
+                    </p>
+                </div>
+                <div class="timeline-item" data-dates="02/2019 - 04/2019">
+                    <h4>The Marella Explorer 2 cruise Ship, Cadiz, Spain</h4>
+                    <p>demolition/construction.</p>
+                </div>
+                <div class="timeline-item" data-dates="04/2019 - Present">
+                    <h4>Part AB Kalix Norbotten Lan.</h4>
                 </div>
             </div>
              </div>
@@ -84,64 +104,58 @@
                         <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                             <div class="row">
                                 <div class="col-2">
-                                   <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
+                                   <i class="three-reasons-icon fas fa-paint-roller" aria-hidden="true"></i>
                                 </div>
                                 <div class="col-10">
-                                    <h4 class="three-reasons-heading uppercase">Front End</h4>
-                                    <p>
-                                     I'm skilled in User Experience Design using the trinity of HTML/CSS/JavaScript.
-                                     I also have extensive experience in Front End Frameworks such as Angular and React.
-                                    </p>
+                                    <h4 class="three-reasons-heading uppercase">Painter</h4>
+                                   
                                 </div>
                             </div>
                         </div>
                         <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                             <div class="row">
                                 <div class="col-2">
-                                   <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
+                                   <i class="three-reasons-icon fas fa-hammer" aria-hidden="true"></i>
                                 </div>
+
                                 <div class="col-10">
-                                    <h4 class="three-reasons-heading uppercase">Back End</h4>
-                                    <p>
-                                        I specialize in data-driven web applications Many of my projects utilise 
-                                        document-based data. I use Phyton and Django in conjuction with MongoDB
-                                        to process and present infromation.
-                                    </p>
+                                    <h4 class="three-reasons-heading uppercase">Construction</h4>
+                                    
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="row progress-section">
-                        <div class="col">
+                        <div class="col-md-9">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+                                    <span class="sr-only">95% complete</span>
+                                </div>
+                                <span class="progress-type"> Painter</span>
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
                                     <span class="sr-only">90% complete</span>
                                 </div>
-                                <span class="progress-type"> HTML / HTML5</span>
+                                <span class="progress-type"> Drywall</span>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-                                    <span class="sr-only">80% complete</span>
+                                <div class="progress-bar bg-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+                                    <span class="sr-only">50% complete</span>
                                 </div>
-                                <span class="progress-type"> CSS / CSS3</span>
-                            </div>
-                            <div class="progress">
-                                <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
-                                    <span class="sr-only">70% complete</span>
-                                </div>
-                                <span class="progress-type"> JavaScript / jQuery</span>
+                                <span class="progress-type"> Carpentry</span>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
                                     <span class="sr-only">80% complete</span>
                                 </div>
-                                <span class="progress-type"> Django / Python</span>
+                                <span class="progress-type">Tile Setter</span>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-                                    <span class="sr-only">80% complete</span>
+                                <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
+                                    <span class="sr-only">30% complete</span>
                                 </div>
-                                <span class="progress-type"> SQL / NoSQL</span>
+                                <span class="progress-type">Plumbing</span>
                             </div>
                         </div>
                     </div>
@@ -162,53 +176,18 @@
                   <h5 class="uppercase general-sub">Download</h5>
                   <p class="inline-block">
                       Need a printable version of my CV? Download it here.
-                      <a href="assets/cv/downloadCV.png" target="_blank" class="cv-pdf">
+                      <a href="assets/cv/Henry_Valle_-_Resume_-_Construction_Worker 2.pdf" target="_blank" class="cv-pdf">
                          <i class="fa fa-download" aria-hidden="true"></i>
                          <span class="sr-only">Download link.</span>
                       </a>
                   </p>
                 </div>
                 <div class="col-sm-4">
-                   <h5 class="uppercase general-sub">Social</h5>
-                   <ul class="list-inline social-links">
-                      <li class="list-inline-item">
-                          <a target="_blank" href="#">
-                             <i class="fa fa-facebook" aria-hidden="true"></i>
-                             <span class="sr-only">Facebook</span>
-                          </a>
-                      </li>
-                      <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                           <i class="fa fa-twitter" aria-hidden="true"></i>
-                           <span class="sr-only">Twitter/span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                           <i class="fa fa-linkedin" aria-hidden="true"></i>
-                           <span class="sr-only">LinkedIn</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                           <i class="fa fa-pinterest" aria-hidden="true"></i>
-                           <span class="sr-only">Pinterest</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                           <i class="fa fa-instagram" aria-hidden="true"></i>
-                           <span class="sr-only">Instagram</span>
-                        </a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a target="_blank" href="#">
-                           <i class="fa fa-youtube" aria-hidden="true"></i>
-                           <span class="sr-only">YouTube</span>
-                        </a>
-                    </li>
-                   </ul>
-                </div>
+                    <h5 class="uppercase general-sub">Interests</h5>
+                    <p class="inline-block">
+                       Music, Playing Guitar, Cooking, Travel, learning new skills, Short-Term Investing, Computer Science, Programing & Learn Languages.
+                  </p>
+                 </div>
             </div>
      </footer>
 </body>
