--- a/gallery.html
+++ b/gallery.html
@@ -52,8 +52,8 @@
                  <h5 class="uppercase text-center"></h5>
              </div>
              <div class="gallery">
-                <img src="/assets/images/pic1.jpg" alt="">
-                <img src="/assets/images/pic2.jpg" alt="">
+                <img src="./assets/images/pic1.jpg" alt="">
+                <img src="./assets/images/pic2.jpg" alt="">
                 <img src="/assets/images/pic3.jpg" alt="">
                 <img src="/assets/images/pic4.jpg" alt="">
                 <img src="/assets/images/pic5.jpg" alt="">
