--- a/gallery.html
+++ b/gallery.html
@@ -54,40 +54,40 @@
              <div class="gallery">
                 <img src="./assets/images/pic1.jpg" alt="">
                 <img src="./assets/images/pic2.jpg" alt="">
-                <img src="/assets/images/pic3.jpg" alt="">
-                <img src="/assets/images/pic4.jpg" alt="">
-                <img src="/assets/images/pic5.jpg" alt="">
-                <img src="/assets/images/pic5-1.jpg" alt="">
-                <img src="/assets/images/pic5-2.jpg" alt="">
-                <img src="/assets/images/pic6.jpg" alt="">
-                <img src="/assets/images/pic7.jpg" alt="">
-                <img src="/assets/images/pic7-1.jpg" alt="">
-                <img src="/assets/images/pic7-2.jpg" alt="">
-                <img src="/assets/images/pic7-3.jpg" alt="">
-                <img src="/assets/images/pic8.jpg" alt="">
-                <img src="/assets/images/pic9.jpg" alt="">
-                <img src="/assets/images/pic11.jpeg" alt="">
-                <img src="/assets/images/pic12.jpg" alt="">
-                <img src="/assets/images/pic13.jpg" alt="">
-                <img src="/assets/images/pic14.jpg" alt="">
-                <img src="/assets/images/pic15.jpg" alt="">
-                <img src="/assets/images/pic16.jpg" alt="">
-                <img src="/assets/images/pic17.jpg" alt="">
-                <img src="/assets/images/pic19.jpg" alt="">
-                <img src="/assets/images/pic20.jpg" alt="">
-                <img src="/assets/images/pic21.jpg" alt="">
-                <img src="/assets/images/pic22.jpg" alt="">
-                <img src="/assets/images/pic23.jpg" alt="">
-                <img src="/assets/images/pic24.jpg" alt="">
-                <img src="/assets/images/pic25.JPG" alt="">
-                <img src="/assets/images/pic26.JPG" alt="">
-                <img src="/assets/images/pic27.JPG" alt="">
-                <img src="/assets/images/pic29.JPG" alt="">
-                <img src="/assets/images/pic31.JPG" alt="">
-                <img src="/assets/images/pic32.JPG" alt="">
-                <img src="/assets/images/pic34.JPG" alt="">
-                <img src="/assets/images/pic35.JPG" alt="">
-                <img src="/assets/images/pic36.JPG" alt="">
+                <img src="./assets/images/pic3.jpg" alt="">
+                <img src="./assets/images/pic4.jpg" alt="">
+                <img src="./assets/images/pic5.jpg" alt="">
+                <img src="./assets/images/pic5-1.jpg" alt="">
+                <img src="./assets/images/pic5-2.jpg" alt="">
+                <img src="./assets/images/pic6.jpg" alt="">
+                <img src="./assets/images/pic7.jpg" alt="">
+                <img src="./assets/images/pic7-1.jpg" alt="">
+                <img src="./assets/images/pic7-2.jpg" alt="">
+                <img src="./assets/images/pic7-3.jpg" alt="">
+                <img src="./assets/images/pic8.jpg" alt="">
+                <img src="./assets/images/pic9.jpg" alt="">
+                <img src="./assets/images/pic11.jpeg" alt="">
+                <img src="./assets/images/pic12.jpg" alt="">
+                <img src="./assets/images/pic13.jpg" alt="">
+                <img src="./assets/images/pic14.jpg" alt="">
+                <img src="./assets/images/pic15.jpg" alt="">
+                <img src="./assets/images/pic16.jpg" alt="">
+                <img src="./assets/images/pic17.jpg" alt="">
+                <img src="./assets/images/pic19.jpg" alt="">
+                <img src="./assets/images/pic20.jpg" alt="">
+                <img src="./assets/images/pic21.jpg" alt="">
+                <img src="./assets/images/pic22.jpg" alt="">
+                <img src="./assets/images/pic23.jpg" alt="">
+                <img src="./assets/images/pic24.jpg" alt="">
+                <img src="./assets/images/pic25.JPG" alt="">
+                <img src="./assets/images/pic26.JPG" alt="">
+                <img src="./assets/images/pic27.JPG" alt="">
+                <img src="./assets/images/pic29.JPG" alt="">
+                <img src="./assets/images/pic31.JPG" alt="">
+                <img src="./assets/images/pic32.JPG" alt="">
+                <img src="./assets/images/pic34.JPG" alt="">
+                <img src="./assets/images/pic35.JPG" alt="">
+                <img src="./assets/images/pic36.JPG" alt="">
             </div>
          </div>
      </section>
