--- a/resume.html
+++ b/resume.html
@@ -185,7 +185,7 @@
                 <div class="col-sm-4">
                     <h5 class="uppercase general-sub">Interests</h5>
                     <p class="inline-block">
-                       Music, Playing Guitar, Cooking, Travel, learning new skills, Short-Term Investing, Computer Science, Programing & Learn Languages.
+                       Music, Playing Guitar, Cooking, Travel, learning new skills, Short-Term Investing, Programing & Learn Languages.
                   </p>
                  </div>
             </div>
