--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <div class="col-sm-4">
                    <h5 class="uppercase general-sub">Interests</h5>
                    <p class="inline-block">
-                      Music, Playing Guitar, Cooking, Travel, Learning New Skills, Short-Term Investing, Computer Science, Programing & Learn Languages.
+                      Music, Playing Guitar, Cooking, Travel, Learning New Skills, Short-Term Investing, & Learn Languages.
                  </p>
                 </div>
             </div>
