--- a/gallery.html
+++ b/gallery.html
@@ -75,10 +75,10 @@
                 <img src="./assets/images/pic17.jpg" alt="">
                 <img src="./assets/images/pic19.jpg" alt="">
                 <img src="./assets/images/pic20.jpg" alt="">
-                <img src="./assets/images/pic21.jpg" alt="">
-                <img src="./assets/images/pic22.jpg" alt="">
+                <img src="./assets/images/pic21.JPG" alt="">
+                <img src="./assets/images/pic22.JPG" alt="">
                 <img src="./assets/images/pic23.jpg" alt="">
-                <img src="./assets/images/pic24.jpg" alt="">
+                <img src="./assets/images/pic24.JPG" alt="">
                 <img src="./assets/images/pic25.JPG" alt="">
                 <img src="./assets/images/pic26.JPG" alt="">
                 <img src="./assets/images/pic27.JPG" alt="">
