--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
                                 <a href="gallery.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment" aria-hidden="true"></i><span>Gallery</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="assets/cv/Henry_Valle_-_Resume_-_Construction_Worker 2.pdf" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                                <a href="assets/cv/Henry_Valle - CV.pdf" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                             </li>
                          </ul>
                       </div>
@@ -176,7 +176,7 @@
                   <h5 class="uppercase general-sub">Download</h5>
                   <p class="inline-block">
                       Need a printable version of my CV? Download it here.
-                      <a href="assets/cv/Henry_Valle_-_Resume_-_Construction_Worker 2.pdf" target="_blank" class="cv-pdf">
+                      <a href="assets/cv/Henry_Valle - CV.pdf" target="_blank" class="cv-pdf">
                          <i class="fa fa-download" aria-hidden="true"></i>
                          <span class="sr-only">Download link.</span>
                       </a>
