--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
          <link rel="stylesheet" href="assets/css/style.css">
+         <link rel="stylesheet" href="assets/css/lightbox.min.css">
+         <link rel="stylesheet" href="assets/js/lightbox-plus-jquery.min.js">
          <title>Resume</title>
     </head>
 
@@ -296,7 +298,7 @@
                   <h5 class="uppercase general-sub">Download</h5>
                   <p class="inline-block">
                       Need a printable version of my CV? Download it here.
-                      <a href="assets/cv/Henry_Valle_-_Resume_-_Construction_Worker 2.pdf" target="_blank" class="cv-pdf">
+                      <a href="assets/cv/Henry_Valle - CV.pdf" target="_blank" class="cv-pdf">
                          <i class="fa fa-download" aria-hidden="true"></i>
                          <span class="sr-only">Download link.</span>
                       </a>
