--- a/gallery.html
+++ b/gallery.html
@@ -114,7 +114,7 @@
             <div class="col-sm-4">
               <h5 class="uppercase general-sub">About</h5>
                  <p class="inline-block">
-                   
+                    Painter/Construction worker with skills and experience in Interior Home Remodeling.
                 </p>
             </div>
             <div class="col-sm-4">
