--- a/gallery.html
+++ b/gallery.html
@@ -22,23 +22,23 @@
                   <div class="row no-gutters bg-color-name-title">
                       <div class="col heading">
                          <h1 class="name">Henry Valle</h1>
-                         <h2 class="title">Painter/Construction worker</h2>
+                         <h2 class="title">Målare/Byggnadsarbetare</h2>
                       </div>
                   </div>  
                   <div class="row no-gutters">
                      <div class="col">
                          <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
-                              <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                              <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Hem</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                               <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-user-circle-o" aria-hidden="true"></i><span>Resume</span></a>
+                               <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-user-circle-o" aria-hidden="true"></i><span>återuppta</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="gallery.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment" aria-hidden="true"></i><span>Gallery</span></a>
+                                <a href="gallery.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment" aria-hidden="true"></i><span>Galleri</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="assets/cv/Henry_Valle_-_Resume_-_Construction_Worker 2.pdf" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                                <a href="assets/cv/Henry_Valle_-_Resume_-_Construction_Worker 2.pdf" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Ladda Ner</span></a>
                             </li>
                          </ul>
                       </div>
@@ -112,25 +112,25 @@
      <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
-              <h5 class="uppercase general-sub">About</h5>
+              <h5 class="uppercase general-sub">om mig</h5>
                  <p class="inline-block">
-                    Painter/Construction worker with skills and experience in Interior Home Remodeling.
+                    Målare/Byggnadsarbetare med kompetens och erfarenhet av inredning av hem.
                 </p>
             </div>
             <div class="col-sm-4">
               <h5 class="uppercase general-sub">Download</h5>
               <p class="inline-block">
-                  Need a printable version of my CV? Download it here.
+                Behöver du en utskrivbar version av mitt CV? Ladda ner den här.
                   <a href="assets/cv/Henry_Valle_-_Resume_-_Construction_Worker 2.pdf" target="_blank" class="cv-pdf">
                      <i class="fa fa-download" aria-hidden="true"></i>
-                     <span class="sr-only">Download link.</span>
+                     <span class="sr-only">Ladda ner.</span>
                   </a>
               </p>
             </div>
             <div class="col-sm-4">
-                <h5 class="uppercase general-sub">Interests</h5>
+                <h5 class="uppercase general-sub">Intressen</h5>
                 <p class="inline-block">
-                   Music, Playing Guitar, Cooking, Travel, Learning New Skills, Short-Term Investing, Programing & Learn Languages.
+                    Musik, spela gitarr, laga mat, resa, lära sig nya färdigheter och lära sig språk.
               </p>
              </div>
         </div>
