--- a/resume.html
+++ b/resume.html
@@ -23,23 +23,23 @@
                   <div class="row no-gutters bg-color-name-title">
                       <div class="col heading">
                          <h1 class="name">Henry A. Valle</h1>
-                         <h2 class="title">Painter/Construction Worker</h2>
+                         <h2 class="title">Målare/Byggnadsarbetare</h2>
                       </div>
                   </div>  
                   <div class="row no-gutters">
                      <div class="col">
                          <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menuitem">
-                              <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                              <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Hem</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                               <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-user-circle-o" aria-hidden="true"></i><span>Resume</span></a>
+                               <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-user-circle-o" aria-hidden="true"></i><span>återuppta</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="gallery.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment" aria-hidden="true"></i><span>Gallery</span></a>
+                                <a href="gallery.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment" aria-hidden="true"></i><span>Galleri</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="assets/cv/Henry_Valle - CV.pdf" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                                <a href="assets/cv/Henry_Valle - CV.pdf" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Ladda Ner</span></a>
                             </li>
                          </ul>
                       </div>
@@ -53,7 +53,7 @@
                  <div class="row">
                      <div class="col-12">
                          <h3 class="history-heading uppercase">
-                             Work History
+                            Jobbhistorik
                          </h3>
                      </div>
                  </div>
@@ -98,7 +98,7 @@
              <div class="col-md-8 bg-color-three-reasons section-column">
                  <div class="row">
                      <div class="col">
-                         <h3 class="section-heading uppercase">My Skills</h3>
+                         <h3 class="section-heading uppercase">Mina färdigheter</h3>
                      </div>
                  </div>
                     <div class="row">
@@ -109,7 +109,7 @@
                                    <i class="three-reasons-icon fas fa-paint-roller" aria-hidden="true"></i>
                                 </div>
                                 <div class="col-10">
-                                    <h4 class="three-reasons-heading uppercase">Painter</h4>
+                                    <h4 class="three-reasons-heading uppercase">Målare</h4>
                                    
                                 </div>
                             </div>
@@ -121,7 +121,7 @@
                                 </div>
 
                                 <div class="col-10">
-                                    <h4 class="three-reasons-heading uppercase">Construction</h4>
+                                    <h4 class="three-reasons-heading uppercase">Konstruktion</h4>
                                     
                                 </div>
                             </div>
@@ -131,33 +131,33 @@
                         <div class="col-md-9">
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
-                                    <span class="sr-only">95% complete</span>
+                                    <span class="sr-only">90% complete</span>
                                 </div>
-                                <span class="progress-type"> Painter</span>
+                                <span class="progress-type">Målare</span>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
-                                    <span class="sr-only">90% complete</span>
+                                    <span class="sr-only">80% complete</span>
                                 </div>
-                                <span class="progress-type"> Drywall</span>
+                                <span class="progress-type">Gipsvägg</span>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar bg-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-                                    <span class="sr-only">50% complete</span>
+                                    <span class="sr-only">60% complete</span>
                                 </div>
-                                <span class="progress-type"> Carpentry</span>
+                                <span class="progress-type">Snickeri</span>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
                                     <span class="sr-only">80% complete</span>
                                 </div>
-                                <span class="progress-type">Tile Setter</span>
+                                <span class="progress-type">Kakelsättare</span>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
-                                    <span class="sr-only">30% complete</span>
+                                    <span class="sr-only">80% complete</span>
                                 </div>
-                                <span class="progress-type">Plumbing</span>
+                                <span class="progress-type">VVS</span>
                             </div>
                         </div>
                     </div>
@@ -168,25 +168,25 @@
      <footer class="container-fluid">
             <div id="footer-details" class="row">
                 <div class="col-sm-4">
-                  <h5 class="uppercase general-sub">About</h5>
+                  <h5 class="uppercase general-sub">Om mig</h5>
                      <p class="inline-block">
-                        Painter/Construction worker with skills and experience in Interior Home Remodeling.
+                        Målare/Byggnadsarbetare med kompetens och erfarenhet av inredning av hem.
                     </p>
                 </div>
                 <div class="col-sm-4">
                   <h5 class="uppercase general-sub">Download</h5>
                   <p class="inline-block">
-                      Need a printable version of my CV? Download it here.
+                    Behöver du en utskrivbar version av mitt CV? Ladda ner den här.
                       <a href="assets/cv/Henry_Valle - CV.pdf" target="_blank" class="cv-pdf">
                          <i class="fa fa-download" aria-hidden="true"></i>
-                         <span class="sr-only">Download link.</span>
+                         <span class="sr-only">Ladda ner.</span>
                       </a>
                   </p>
                 </div>
                 <div class="col-sm-4">
-                    <h5 class="uppercase general-sub">Interests</h5>
+                    <h5 class="uppercase general-sub">Intressen</h5>
                     <p class="inline-block">
-                       Music, Playing Guitar, Cooking, Travel, learning new skills, Short-Term Investing, Programing & Learn Languages.
+                        Musik, spela gitarr, laga mat, resa, lära sig nya färdigheter och lära sig språk.
                   </p>
                  </div>
             </div>
