new commit translate

--- a/resume.html
+++ b/resume.html
@@ -60,35 +60,35 @@
                  <div class="history-items">
                  <div class="timeline-item" data-dates="04/2010 - 10/2014">
                     <h4>Cordova condominiums & FIU university for N&B painting Corp, Miami Florida USA</h4>
-                    <p>Painter</p>
+                    <p>Målare</p>
                 </div>
                 <div class="timeline-item" data-dates="11/2014 - 10/2015">
                     <h4>Restoration USA, Pompano Beach, Florida USA</h4>
-                    <p>Mold remediation and water damage restoration, drywall , finish, plumbing and
-                        painting
+                    <p>Mögelsanering och vattenskadesanering, gipsskivor, VVS och
+                        målning
                         </p>
                 </div>
                 <div class="timeline-item" data-dates="03/2016 - 11/2016">
                     <h4>Home remodeling for Oasis LLC, Deerfield beach FL USA</h4>
-                    <p>Painting, Drywall & carpentry,</p>
+                    <p>Målning, Gips & snickeri</p>
                 </div>
                 <div class="timeline-item" data-dates="11/2016 - 03/2017">
                     <h4>Aqualina spa & resort for JS carpentry, Sunny Isles beach, FL USA</h4>
-                    <p>Drywall painting,  firewall & gasline pipe inspection.</p>
+                    <p>Gipsmålning, brandvägg & gasledningsinspektion.</p>
                 </div>
                 <div class="timeline-item" data-dates="03/2017 - 09/2017">
                     <h4>The Villages for JJ&V painting corp, West Palm Beach FL USA
                     </h4>
-                    <p>Painting</p>
+                    <p>Målare</p>
                 </div>
                 <div class="timeline-item" data-dates="09/2017 - 06/2018">
                     <h4>Doherty construction group llc, West palm beach FL USA</h4>
-                    <p>Home remodeling, tile installation, drywall, finish , painting and carpentry
+                    <p>Hemrenovering, kakelläggning, gipsskivor, målning och snickeri
                     </p>
                 </div>
                 <div class="timeline-item" data-dates="02/2019 - 04/2019">
                     <h4>The Marella Explorer 2 cruise Ship, Cadiz, Spain</h4>
-                    <p>demolition/construction.</p>
+                    <p>rivning/byggnation.</p>
                 </div>
                 <div class="timeline-item" data-dates="04/2019 - Present">
                     <h4>Part AB Kalix Norbotten Lan.</h4>
