--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </div>
                     <div class="value">
                         <p>
-                           Centrumvägen 52b #1202, Kalix, Norrbotten Sweden
+                         Norrbotten Sweden
                         </p>
                     </div>
                 </div>
