--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                     </div>
                     <div class="value">
                         <p>
-                         Norrbotten Sweden
+                        Starvägen 12, 139 41 Värmdö
+
                         </p>
                     </div>
                 </div>
