--- a/resume.html
+++ b/resume.html
@@ -90,8 +90,13 @@
                     <h4>The Marella Explorer 2 cruise Ship, Cadiz, Spain</h4>
                     <p>rivning/byggnation.</p>
                 </div>
-                <div class="timeline-item" data-dates="04/2019 - Present">
+                <div class="timeline-item" data-dates="04/2019 - 12/2021">
                     <h4>Part AB Kalix Norbotten Lan.</h4>
+                    
+                </div>
+                <div class="timeline-item" data-dates="01/2022 - 03/2022">
+                    <h4>RKAB Kiruna, Norrbotten Lan</h4>
+                    <p>Plattsättning</p>
                 </div>
             </div>
              </div>
