information update & bugFix

--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -94,9 +94,13 @@
                     <h4>Part AB Kalix Norbotten Lan.</h4>
                     
                 </div>
-                <div class="timeline-item" data-dates="01/2022 - 03/2022">
+                <div class="timeline-item" data-dates="1/2022 - 3/2022">
                     <h4>RKAB Kiruna, Norrbotten Lan</h4>
                     <p>Plattsättning</p>
+                </div>
+                <div class="timeline-item" data-dates="5/2022 - 7/2022">
+                    <h4>Andreu Bygg AB</h4>
+                    <p>Målare</p>
                 </div>
             </div>
              </div>
@@ -135,31 +139,31 @@
                     <div class="row progress-section">
                         <div class="col-md-9">
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 95%;">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
                                     <span class="sr-only">90% complete</span>
                                 </div>
                                 <span class="progress-type">Målare</span>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                                <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
                                     <span class="sr-only">80% complete</span>
                                 </div>
                                 <span class="progress-type">Gipsvägg</span>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar bg-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
-                                    <span class="sr-only">60% complete</span>
+                                <div class="progress-bar bg-info" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%;">
+                                    <span class="sr-only">65% complete</span>
                                 </div>
                                 <span class="progress-type">Snickeri</span>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
-                                    <span class="sr-only">80% complete</span>
+                                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 65%;">
+                                    <span class="sr-only">65% complete</span>
                                 </div>
                                 <span class="progress-type">Kakelsättare</span>
                             </div>
                             <div class="progress">
-                                <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
+                                <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
                                     <span class="sr-only">80% complete</span>
                                 </div>
                                 <span class="progress-type">VVS</span>
@@ -188,12 +192,6 @@
                       </a>
                   </p>
                 </div>
-                <div class="col-sm-4">
-                    <h5 class="uppercase general-sub">Intressen</h5>
-                    <p class="inline-block">
-                        Musik, spela gitarr, laga mat, resa, lära sig nya färdigheter och lära sig språk.
-                  </p>
-                 </div>
             </div>
      </footer>
 </body>
