--- a/resume.html
+++ b/resume.html
@@ -138,6 +138,15 @@
             <div class="timeline-item" data-dates="04/2019 - Present">
               <h4>Part AB Kalix Norbotten Lan.</h4>
             </div>
+            <div class="timeline-item" data-dates="04/2019 - Present">
+              <h4>Part AB Kalix Norbotten Lan.</h4>
+            </div>
+            <div class="timeline-item" data-dates="04/2019 - Present">
+              <h4>Part AB Kalix Norbotten Lan.</h4>
+            </div>
+            <div class="timeline-item" data-dates="04/2019 - Present">
+              <h4>Part AB Kalix Norbotten Lan.</h4>
+            </div>
           </div>
         </div>
         <div class="col-md-8 bg-color-three-reasons section-column">
