new work experience

--- a/resume.html
+++ b/resume.html
@@ -135,17 +135,14 @@
               <h4>The Marella Explorer 2 cruise Ship, Cadiz, Spain</h4>
               <p>rivning/byggnation.</p>
             </div>
-            <div class="timeline-item" data-dates="04/2019 - Present">
+            <div class="timeline-item" data-dates="04/2019 - 12/2021">
               <h4>Part AB Kalix Norbotten Lan.</h4>
             </div>
-            <div class="timeline-item" data-dates="04/2019 - Present">
-              <h4>Part AB Kalix Norbotten Lan.</h4>
+            <div class="timeline-item" data-dates="05/2022 - 8/2022">
+              <h4>Andreu Bygg AB Stockholm.</h4>
             </div>
-            <div class="timeline-item" data-dates="04/2019 - Present">
-              <h4>Part AB Kalix Norbotten Lan.</h4>
-            </div>
-            <div class="timeline-item" data-dates="04/2019 - Present">
-              <h4>Part AB Kalix Norbotten Lan.</h4>
+            <div class="timeline-item" data-dates="08/2022 - Present">
+              <h4>Submit AB Stockholm. </h4>
             </div>
           </div>
         </div>
