--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </div>
                     <div class="value">
                         <p>
-                        Starvägen 12, 139 41 Värmdö
+                        Lingvägen 183 Farsta, Stockholm
 
                         </p>
                     </div>
